.conflict-base-0/kubernetes/apps/external/birdnet/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: birdnet
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`birdnet.${DOMAIN}`)
      kind: Rule
      services:
        - name: birdnet
          port: 80
  tls: {}
